# rpghp-rs

./: .dockerignore  .gitignore  .rustfmt.toml  Cargo.toml  Dockerfile  Makefile  Makehelp.mk  README.org  TECH_DOC.org  TODO.org  bacon.toml  docker-compose.yml  example.env  example.env.docker  flake.nix
.sqlx/: query-098ce5a9f50c62b4b6300bde3bdb0db43ba27e7ab6b4948c8118f126070efbea.json  query-1283aff550a3e8d633e461476a8644285a40acab22befaf9822958848b1a5d07.json  query-19dd3feb9e1a73b0e644b9cdd5a4ef73717d2b8283db2232d67b5a5494357445.json  query-4a0b54be95634fdb2df1debfdcccb9c7c5b20c484be8edc8d7c849accf012e0f.json  query-6a67b990f799a07e8965f6e5b97252428671ae1119080930c0e20d057dd8e6d1.json  query-727bc32cc5930e62f26387b15e24fcdb2562b98f5a5429f1355520e91d8ac457.json  query-ce75c4fe8e3a8ae755dbecad477d5d81f4bb8e7ee9ff339bfa1a297155f2f6a2.json  query-d043bd5b6333528adf8b7dc25f22dfb9c9041f05da169e2db8496818a1eb1603.json  query-d85bec8bd1369e82fbf2e188b6796969d0c3691b62c529f0fe8f957cda39a668.json  query-e7a7bad30fd2cbfa360b0d7c38baa6bbc81ea4cd86731334d223792f05f2a0fb.json  query-f5fea3a3055c064182fc7799f3a1d527c8906ea0ee5a476878bc7aa598c73733.json
assets/: style.css
assets/newmock/: index.html
assets/oldmock/: index.html  style.css  theme.js
curl_tests/: create-session.sh  delete-session.sh  get-session.sh  hello.sh  rm-session.sh
handlebars/: index.hb  index.hbs
handlebars/partials/: example.hbs
httpyac/: .env.example  _full.http  create-session.http  get-session-by-id.http  get-session-by-secret.http  init_group.json  jon_creature.json  jon_hidden.json  jon_visible.json  rm-session.http  test.http
migrations/: 0001_session.down.sql  0001_session.up.sql  0002_creature.down.sql  0002_creature.up.sql  0003_creature-cascade.down.sql  0003_creature-cascade.up.sql  0004_creature_icon.down.sql  0004_creature_icon.up.sql  0005_init_group.down.sql  0005_init_group.up.sql  0006_remove_redundant_reference.down.sql  0006_remove_redundant_reference.up.sql
src/: app_state.rs  config.rs  main.rs  prelude.rs
src/domain/: core.rs  domain_actions.rs  domain_error.rs  error.rs  facade.rs  mod.rs
src/domain/command/: auth.rs  mod.rs
src/domain/command/creature/: create.rs
src/domain/command/session/: create.rs  delete.rs  get.rs
src/domain/domain_actions/: creature.rs  mod.rs  session.rs
src/domain/entity/: creature.rs  init_group.rs  mod.rs  session.rs
src/domain/records/: creature.rs  init_group.rs  mod.rs  record.rs  session.rs
src/domain/repository/: core.rs  creature.rs  init_group.rs  mod.rs  session.rs
src/domain/service/: creature.rs  init_group.rs  mod.rs  session.rs
src/dto/: mod.rs  session.rs
src/records/: mod.rs  session.rs
src/routes/: mod.rs  session.rs
src/server/: core.rs  frontend_shared_state.rs  mod.rs  shared_state.rs  web_server.rs
src/server/api/: api_shared_state.rs  mod.rs  request.rs  rpghp_api.rs  shared_state.rs  view.rs
src/server/api/action/: creature_routes.rs  mod.rs  session_routes.rs
src/server/api/action_input/: creature_inputs.rs  mod.rs
src/server/api/domain/: creature.rs  creature_record.rs  mod.rs  session.rs  session_record.rs
src/server/api/render/: creature_view.rs  mod.rs  session_view.rs
src/server/api/resources/: creature.rs  mod.rs  session.rs
src/server/api/resources_v1/: creature.rs  mod.rs
src/server/application_context/: core.rs  mod.rs
src/server/frontend/: frontend_shared_state.rs  mod.rs
src/server/partials/: mod.rs
src/server/shared_state/: core.rs  mod.rs  template_registry.rs
(+34 files in other folders)
