[package]
name = "rpghp-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = "0.6.3"
dotenv = "0.15.0"
handlebars = "6.3.2"
log = "0.4.27"
poem = { version = "3.1.7", features = ["static-files"] }
poem-openapi = { version = "5.1.8", features = ["redoc"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio", "uuid", "time"] }
thiserror = "2.0.12"
tokio = { version = "1.44.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.15.1", features = ["serde", "v4"] }
